--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,8 @@ tomli = "^2.0.1"
 uvicorn = "^0.22.0"
 alembic = "^1.10.4"
 blacksheep = "^1.2.14"
+pydantic = "^1.10.7"
+aiofiles = "^23.1.0"
 
 
 [build-system]
