--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Bol4onok <95026332+MihailGulkin@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 asyncpg = "^0.27.0"
 pytest = "^7.3.1"
 didiator = "^0.3.1"
@@ -24,6 +24,7 @@ pre-commit = "^3.3.1"
 tomli = "^2.0.1"
 anyio = "^3.6.2"
 di = "^0.75.3"
+fastapi = "^0.95.1"
 
 
 [build-system]
