--- a/backend/docker-compose.test.yaml
+++ b/backend/docker-compose.test.yaml
@@ -1,6 +1,31 @@
 version: '3.8'
 
 services:
+  test-db:
+    image: postgres:latest
+    container_name: DDDTodoTestPostgres
+    restart: on-failure
+    env_file:
+      - .test.env
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d DDDTodoTest -U postgres" ]
+      interval: 5s
+      timeout: 20s
+      retries: 5
+  rabbitmq:
+    image: rabbitmq:3.11-management
+    container_name: DDDTodoTestRabbit
+    hostname: DevRabbitmq
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 5s
+      timeout: 30s
+      retries: 3
+    ports:
+      - "127.0.0.1:5672:5672"
+      - "127.0.0.1:15672:15672"
+    env_file:
+      .test.env
   app-test:
     container_name: todo-app-test
 
@@ -8,3 +33,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: test
+    depends_on:
+      test-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
