--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,8 @@ tomli = "^2.0.1"
 anyio = "^3.6.2"
 di = "^0.75.3"
 fastapi = "^0.95.1"
+pytest-asyncio = "^0.21.0"
+httpx = "^0.24.0"
 
 
 [build-system]
@@ -35,6 +37,3 @@ markers = [
     "domain: test domain logic",
 ]
 pythonpath = "src"
-addopts = [
-    "--import-mode=importlib",
-]
