--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ di = "^0.75.3"
 fastapi = "^0.95.1"
 pytest-asyncio = "^0.21.0"
 httpx = "^0.24.0"
+pytest-lazy-fixture = "^0.6.3"
 
 
 [build-system]
