--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,8 @@ fastapi = "^0.95.1"
 pytest-asyncio = "^0.21.0"
 httpx = "^0.24.0"
 pytest-lazy-fixture = "^0.6.3"
+gunicorn = "^20.1.0"
+hypercorn = "^0.14.3"
 
 
 [build-system]
