--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ fastapi = "^0.95.1"
 pytest-asyncio = "^0.21.0"
 httpx = "^0.24.0"
 pytest-lazy-fixture = "^0.6.3"
+sanic = {extras = ["ext"], version = "^23.3.0"}
 
 
 [build-system]
