add 2 query hadnl

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,4 @@
-.idea
+q.idea
 __pycache__
 .env
 user_service
@@ -12,3 +12,4 @@ hexagonal-architecture-django
 envLinux
 requirements.txt
 code
+.dev.test.env
